src/VNScriptParser.cpp

// Generated from /home/art/programming/pet/oiwdmvn/VNScript.g4 by ANTLR 4.13.2


#include "VNScriptListener.h"
#include "VNScriptVisitor.h"

#include "VNScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct VNScriptParserStaticData final {
  VNScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  VNScriptParserStaticData(const VNScriptParserStaticData&) = delete;
  VNScriptParserStaticData(VNScriptParserStaticData&&) = delete;
  VNScriptParserStaticData& operator=(const VNScriptParserStaticData&) = delete;
  VNScriptParserStaticData& operator=(VNScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag vnscriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<VNScriptParserStaticData> vnscriptParserStaticData = nullptr;

void vnscriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (vnscriptParserStaticData != nullptr) {
    return;
  }
#else
  assert(vnscriptParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<VNScriptParserStaticData>(
    std::vector<std::string>{
      "script", "statement", "sceneStart", "sceneEnd", "backgroundStmt", 
      "musicStmt", "characterDef", "characterBody", "charPropStmt", "dialogueStmt", 
      "narrateStmt", "varAssign", "propAssign", "expr", "choiceStmt", "choiceOption", 
      "block", "ifStmt", "condition", "savepointStmt", "gotoStmt"
    },
    std::vector<std::string>{
      "", "'scene_start'", "'scene_end'", "'background'", "'music'", "'character'", 
      "'{'", "'}'", "'var'", "'narrate'", "'.'", "'true'", "'false'", "'choice'", 
      "'if'", "'else'", "'=='", "'savepoint'", "'goto'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "COMMENT", "WS", "STRING", "NUMBER", "ID"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  vnscriptParserStaticData = std::move(staticData);
}

}

VNScriptParser::VNScriptParser(TokenStream *input) : VNScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

VNScriptParser::VNScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  VNScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *vnscriptParserStaticData->atn, vnscriptParserStaticData->decisionToDFA, vnscriptParserStaticData->sharedContextCache, options);
}

VNScriptParser::~VNScriptParser() {
  delete _interpreter;
}

const atn::ATN& VNScriptParser::getATN() const {
  return *vnscriptParserStaticData->atn;
}

std::string VNScriptParser::getGrammarFileName() const {
  return "VNScript.g4";
}

const std::vector<std::string>& VNScriptParser::getRuleNames() const {
  return vnscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& VNScriptParser::getVocabulary() const {
  return vnscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView VNScriptParser::getSerializedATN() const {
  return vnscriptParserStaticData->serializedATN;
}


//----------------- ScriptContext ------------------------------------------------------------------

VNScriptParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VNScriptParser::ScriptContext::EOF() {
  return getToken(VNScriptParser::EOF, 0);
}

std::vector<VNScriptParser::StatementContext *> VNScriptParser::ScriptContext::statement() {
  return getRuleContexts<VNScriptParser::StatementContext>();
}

VNScriptParser::StatementContext* VNScriptParser::ScriptContext::statement(size_t i) {
  return getRuleContext<VNScriptParser::StatementContext>(i);
}


size_t VNScriptParser::ScriptContext::getRuleIndex() const {
  return VNScriptParser::RuleScript;
}

void VNScriptParser::ScriptContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScript(this);
}

void VNScriptParser::ScriptContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScript(this);
}


std::any VNScriptParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitScript(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::ScriptContext* VNScriptParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 0, VNScriptParser::RuleScript);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8806974) != 0)) {
      setState(42);
      statement();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(48);
    match(VNScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

VNScriptParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

VNScriptParser::SceneStartContext* VNScriptParser::StatementContext::sceneStart() {
  return getRuleContext<VNScriptParser::SceneStartContext>(0);
}

VNScriptParser::SceneEndContext* VNScriptParser::StatementContext::sceneEnd() {
  return getRuleContext<VNScriptParser::SceneEndContext>(0);
}

VNScriptParser::BackgroundStmtContext* VNScriptParser::StatementContext::backgroundStmt() {
  return getRuleContext<VNScriptParser::BackgroundStmtContext>(0);
}

VNScriptParser::MusicStmtContext* VNScriptParser::StatementContext::musicStmt() {
  return getRuleContext<VNScriptParser::MusicStmtContext>(0);
}

VNScriptParser::CharacterDefContext* VNScriptParser::StatementContext::characterDef() {
  return getRuleContext<VNScriptParser::CharacterDefContext>(0);
}

VNScriptParser::DialogueStmtContext* VNScriptParser::StatementContext::dialogueStmt() {
  return getRuleContext<VNScriptParser::DialogueStmtContext>(0);
}

VNScriptParser::NarrateStmtContext* VNScriptParser::StatementContext::narrateStmt() {
  return getRuleContext<VNScriptParser::NarrateStmtContext>(0);
}

VNScriptParser::VarAssignContext* VNScriptParser::StatementContext::varAssign() {
  return getRuleContext<VNScriptParser::VarAssignContext>(0);
}

VNScriptParser::PropAssignContext* VNScriptParser::StatementContext::propAssign() {
  return getRuleContext<VNScriptParser::PropAssignContext>(0);
}

VNScriptParser::IfStmtContext* VNScriptParser::StatementContext::ifStmt() {
  return getRuleContext<VNScriptParser::IfStmtContext>(0);
}

VNScriptParser::ChoiceStmtContext* VNScriptParser::StatementContext::choiceStmt() {
  return getRuleContext<VNScriptParser::ChoiceStmtContext>(0);
}

VNScriptParser::SavepointStmtContext* VNScriptParser::StatementContext::savepointStmt() {
  return getRuleContext<VNScriptParser::SavepointStmtContext>(0);
}

VNScriptParser::GotoStmtContext* VNScriptParser::StatementContext::gotoStmt() {
  return getRuleContext<VNScriptParser::GotoStmtContext>(0);
}


size_t VNScriptParser::StatementContext::getRuleIndex() const {
  return VNScriptParser::RuleStatement;
}

void VNScriptParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void VNScriptParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any VNScriptParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::StatementContext* VNScriptParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, VNScriptParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(63);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(50);
      sceneStart();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(51);
      sceneEnd();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(52);
      backgroundStmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(53);
      musicStmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(54);
      characterDef();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(55);
      dialogueStmt();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(56);
      narrateStmt();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(57);
      varAssign();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(58);
      propAssign();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(59);
      ifStmt();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(60);
      choiceStmt();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(61);
      savepointStmt();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(62);
      gotoStmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SceneStartContext ------------------------------------------------------------------

VNScriptParser::SceneStartContext::SceneStartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VNScriptParser::SceneStartContext::STRING() {
  return getToken(VNScriptParser::STRING, 0);
}


size_t VNScriptParser::SceneStartContext::getRuleIndex() const {
  return VNScriptParser::RuleSceneStart;
}

void VNScriptParser::SceneStartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSceneStart(this);
}

void VNScriptParser::SceneStartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSceneStart(this);
}


std::any VNScriptParser::SceneStartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitSceneStart(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::SceneStartContext* VNScriptParser::sceneStart() {
  SceneStartContext *_localctx = _tracker.createInstance<SceneStartContext>(_ctx, getState());
  enterRule(_localctx, 4, VNScriptParser::RuleSceneStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(VNScriptParser::T__0);
    setState(66);
    match(VNScriptParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SceneEndContext ------------------------------------------------------------------

VNScriptParser::SceneEndContext::SceneEndContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t VNScriptParser::SceneEndContext::getRuleIndex() const {
  return VNScriptParser::RuleSceneEnd;
}

void VNScriptParser::SceneEndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSceneEnd(this);
}

void VNScriptParser::SceneEndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSceneEnd(this);
}


std::any VNScriptParser::SceneEndContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitSceneEnd(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::SceneEndContext* VNScriptParser::sceneEnd() {
  SceneEndContext *_localctx = _tracker.createInstance<SceneEndContext>(_ctx, getState());
  enterRule(_localctx, 6, VNScriptParser::RuleSceneEnd);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(VNScriptParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BackgroundStmtContext ------------------------------------------------------------------

VNScriptParser::BackgroundStmtContext::BackgroundStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VNScriptParser::BackgroundStmtContext::STRING() {
  return getToken(VNScriptParser::STRING, 0);
}


size_t VNScriptParser::BackgroundStmtContext::getRuleIndex() const {
  return VNScriptParser::RuleBackgroundStmt;
}

void VNScriptParser::BackgroundStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBackgroundStmt(this);
}

void VNScriptParser::BackgroundStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBackgroundStmt(this);
}


std::any VNScriptParser::BackgroundStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitBackgroundStmt(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::BackgroundStmtContext* VNScriptParser::backgroundStmt() {
  BackgroundStmtContext *_localctx = _tracker.createInstance<BackgroundStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, VNScriptParser::RuleBackgroundStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(VNScriptParser::T__2);
    setState(71);
    match(VNScriptParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MusicStmtContext ------------------------------------------------------------------

VNScriptParser::MusicStmtContext::MusicStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VNScriptParser::MusicStmtContext::STRING() {
  return getToken(VNScriptParser::STRING, 0);
}


size_t VNScriptParser::MusicStmtContext::getRuleIndex() const {
  return VNScriptParser::RuleMusicStmt;
}

void VNScriptParser::MusicStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMusicStmt(this);
}

void VNScriptParser::MusicStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMusicStmt(this);
}


std::any VNScriptParser::MusicStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitMusicStmt(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::MusicStmtContext* VNScriptParser::musicStmt() {
  MusicStmtContext *_localctx = _tracker.createInstance<MusicStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, VNScriptParser::RuleMusicStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(VNScriptParser::T__3);
    setState(74);
    match(VNScriptParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharacterDefContext ------------------------------------------------------------------

VNScriptParser::CharacterDefContext::CharacterDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VNScriptParser::CharacterDefContext::ID() {
  return getToken(VNScriptParser::ID, 0);
}

VNScriptParser::CharacterBodyContext* VNScriptParser::CharacterDefContext::characterBody() {
  return getRuleContext<VNScriptParser::CharacterBodyContext>(0);
}


size_t VNScriptParser::CharacterDefContext::getRuleIndex() const {
  return VNScriptParser::RuleCharacterDef;
}

void VNScriptParser::CharacterDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCharacterDef(this);
}

void VNScriptParser::CharacterDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCharacterDef(this);
}


std::any VNScriptParser::CharacterDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitCharacterDef(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::CharacterDefContext* VNScriptParser::characterDef() {
  CharacterDefContext *_localctx = _tracker.createInstance<CharacterDefContext>(_ctx, getState());
  enterRule(_localctx, 12, VNScriptParser::RuleCharacterDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(VNScriptParser::T__4);
    setState(77);
    match(VNScriptParser::ID);
    setState(78);
    match(VNScriptParser::T__5);
    setState(79);
    characterBody();
    setState(80);
    match(VNScriptParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharacterBodyContext ------------------------------------------------------------------

VNScriptParser::CharacterBodyContext::CharacterBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<VNScriptParser::CharPropStmtContext *> VNScriptParser::CharacterBodyContext::charPropStmt() {
  return getRuleContexts<VNScriptParser::CharPropStmtContext>();
}

VNScriptParser::CharPropStmtContext* VNScriptParser::CharacterBodyContext::charPropStmt(size_t i) {
  return getRuleContext<VNScriptParser::CharPropStmtContext>(i);
}


size_t VNScriptParser::CharacterBodyContext::getRuleIndex() const {
  return VNScriptParser::RuleCharacterBody;
}

void VNScriptParser::CharacterBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCharacterBody(this);
}

void VNScriptParser::CharacterBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCharacterBody(this);
}


std::any VNScriptParser::CharacterBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitCharacterBody(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::CharacterBodyContext* VNScriptParser::characterBody() {
  CharacterBodyContext *_localctx = _tracker.createInstance<CharacterBodyContext>(_ctx, getState());
  enterRule(_localctx, 14, VNScriptParser::RuleCharacterBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == VNScriptParser::T__7

    || _la == VNScriptParser::ID) {
      setState(82);
      charPropStmt();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharPropStmtContext ------------------------------------------------------------------

VNScriptParser::CharPropStmtContext::CharPropStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VNScriptParser::CharPropStmtContext::ID() {
  return getToken(VNScriptParser::ID, 0);
}

tree::TerminalNode* VNScriptParser::CharPropStmtContext::STRING() {
  return getToken(VNScriptParser::STRING, 0);
}

tree::TerminalNode* VNScriptParser::CharPropStmtContext::NUMBER() {
  return getToken(VNScriptParser::NUMBER, 0);
}


size_t VNScriptParser::CharPropStmtContext::getRuleIndex() const {
  return VNScriptParser::RuleCharPropStmt;
}

void VNScriptParser::CharPropStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCharPropStmt(this);
}

void VNScriptParser::CharPropStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCharPropStmt(this);
}


std::any VNScriptParser::CharPropStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitCharPropStmt(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::CharPropStmtContext* VNScriptParser::charPropStmt() {
  CharPropStmtContext *_localctx = _tracker.createInstance<CharPropStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, VNScriptParser::RuleCharPropStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(95);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(88);
      match(VNScriptParser::ID);
      setState(89);
      match(VNScriptParser::STRING);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(90);
      match(VNScriptParser::ID);
      setState(91);
      match(VNScriptParser::NUMBER);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(92);
      match(VNScriptParser::T__7);
      setState(93);
      match(VNScriptParser::ID);
      setState(94);
      match(VNScriptParser::STRING);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DialogueStmtContext ------------------------------------------------------------------

VNScriptParser::DialogueStmtContext::DialogueStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VNScriptParser::DialogueStmtContext::ID() {
  return getToken(VNScriptParser::ID, 0);
}

tree::TerminalNode* VNScriptParser::DialogueStmtContext::STRING() {
  return getToken(VNScriptParser::STRING, 0);
}


size_t VNScriptParser::DialogueStmtContext::getRuleIndex() const {
  return VNScriptParser::RuleDialogueStmt;
}

void VNScriptParser::DialogueStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDialogueStmt(this);
}

void VNScriptParser::DialogueStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDialogueStmt(this);
}


std::any VNScriptParser::DialogueStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitDialogueStmt(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::DialogueStmtContext* VNScriptParser::dialogueStmt() {
  DialogueStmtContext *_localctx = _tracker.createInstance<DialogueStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, VNScriptParser::RuleDialogueStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(VNScriptParser::ID);
    setState(98);
    match(VNScriptParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NarrateStmtContext ------------------------------------------------------------------

VNScriptParser::NarrateStmtContext::NarrateStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VNScriptParser::NarrateStmtContext::STRING() {
  return getToken(VNScriptParser::STRING, 0);
}


size_t VNScriptParser::NarrateStmtContext::getRuleIndex() const {
  return VNScriptParser::RuleNarrateStmt;
}

void VNScriptParser::NarrateStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNarrateStmt(this);
}

void VNScriptParser::NarrateStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VNScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNarrateStmt(this);
}


std::any VNScriptParser::NarrateStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VNScriptVisitor*>(visitor))
    return parserVisitor->visitNarrateStmt(this);
  else
    return visitor->visitChildren(this);
}

VNScriptParser::NarrateStmtContext* VNScriptParser::narrateStmt() {
  NarrateStmtContext *_localctx = _tracker.createInstance<NarrateStmtContext>(_ctx, getState());
  enterRule(_localctx, 20, VNScriptParser::RuleNarrateStmt);
